prod/pipeline-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-demo
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pipeline-demo
  template:
    metadata:
      labels:
        app: pipeline-demo
    spec:
      containers:
      - image: lurcio/pipeline-demo:v0.0.2
        name: pipeline-demo
        ports:
        - containerPort: 3000
