prod/pipeline-demo-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipline-demo-lb
spec:
  selector:
    name: pipeline-demo-ing
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
