prod/pipeline-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-demo-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: pipeline-demo
